--- a/package.json
+++ b/package.json
@@ -4,17 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=production node -r esm .",
+    "dev": "eval $(cat .env) NODE_ENV=development nodemon -r esm"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^2.9.16",
+    "bcryptjs": "^2.4.3",
+    "connect-redis": "^4.0.3",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
-    "express-graphql": "^0.9.0",
-    "graphql": "^14.5.8"
+    "express-session": "^1.17.0",
+    "graphql": "^14.5.8",
+    "ioredis": "^4.14.1",
+    "joi": "^14.3.1",
+    "mongoose": "^5.8.9"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "standard": "^14.3.1"
   }
 }
